# Lemin

./: .gitignore  CMakeLists.txt  Makefile  README.md  algorithm.c  algorythm.c  bfs.c  ft_qeue.c  junk.c  test.c
includes/: ft_printf.h  ftothmur.h  lemin.h  lemin_my.h  libft.h
lib_ftot/: Makefile  ft_ddeq_new_a.c  ft_ddeqdel.c  ft_ddeqnew.c  ft_ddeqpush_b.c  ft_ddeqpush_b_all.c  ft_delfunc_dummy.c  ft_dlstadd.c  ft_dlstaddtip.c  ft_dlstcmp.c  ft_dlstcontentdel.c  ft_dlstdel.c  ft_dlstfind.c  ft_dlstfind_i.c  ft_dlstfind_ir.c  ft_dlstfind_r.c  ft_dlstforeach.c  ft_dlstiter.c  ft_dlstnew.c  ft_dlstpop.c  ft_dlstpop_rear.c  ft_dlstpush.c  ft_dlstpush_back.c  ft_dlstsize.c  ft_dlstswap.c  ft_free_ptr_ar.c  ft_imaxtostr.c  ft_isdigitnstr.c  ft_isdigitstr.c  ft_lstcmp_next.c  ft_lstfind.c  ft_lstremove.c  ft_realloc.c  ft_reverse.c  ft_strint_ou_flow.c  ft_strrev.c  ft_swap.c  ft_uimaxdiv.c  get_next_line.h  libft_f.h
libft/: Makefile  author  find_min_from_three.c  ft_abs.c  ft_atoi.c  ft_avl_bfactor.c  ft_avl_create.c  ft_avl_findmin.c  ft_avl_height.c  ft_avl_remove.c  ft_bzero.c  ft_check_endiannes.c  ft_ddeq_new_a.c  ft_ddeqdel.c  ft_ddeqextract_b.c  ft_ddeqnew.c  ft_ddeqpush_b.c  ft_ddeqpush_b_all.c  ft_ddeqreset_a.c  ft_delfunc_dummy.c  ft_delim.c  ft_div_mod.c  ft_dlstadd.c  ft_dlstaddtip.c  ft_dlstcmp.c  ft_dlstcontentdel.c  ft_dlstdel.c  ft_dlstextract.c  ft_dlstfind.c  ft_dlstfind_i.c  ft_dlstfind_ir.c  ft_dlstfind_r.c  ft_dlstforeach.c  ft_dlstforeach_if.c  ft_dlstiter.c  ft_dlstmerge.c  ft_dlstnew.c  ft_dlstnew_ptr.c  ft_dlstpop.c  ft_dlstpop_rear.c  (+159 more)
libft/hash_table/: a.out
libft/includes/: libft.h
libft_t/: Makefile  adjust_prec_analize_cell.c  adjust_prec_norm_form.c  adjust_prec_rebuild_func.c  adjust_prec_sci_form.c  adjust_prec_utility_func.c  char_manager.c  chose_content.c  chose_content2.c  content_decision_maker.c  distinct_types.c  fill_spec_func1.c  fill_spec_func2.c  find_max_from_three.c  find_middle_from_three.c  ft_atol.c  ft_avl_balance.c  ft_avl_del.c  ft_avl_fix_height.c  ft_avl_insert.c  ft_avl_rot_left.c  ft_avl_rot_right.c  ft_avl_search.c  ft_count_snum_size.c  ft_is_negative.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lstdel.c  ft_lstdelone.c  ft_lstmap.c  ft_memcmp.c  ft_printf.c  ft_putchar.c  ft_putchar_fd.c  ft_putnbr.c  ft_putnbr_fd.c  (+47 more)
libft_t/includes/: libft.h
main/: delete_project.c  error_help_usage.c  main_initializer.c  process_arguments.c
maps/: 1.txt  2  cycle-map  default-pro  defult  map_small  subject1.txt
maps/big-super-pos/: 123  map1  map2  map3  map4  map5  map6  map7
maps/map_merli/: 10K  map  map_non_valid10  model_1000
maps/map_ozdemir/lucas/: good_map_one_room_without_pipe~  goodmap_test  map_multiple_pipe_from_one_room_to_another  valide_map
maps/my-tests/invalid/: alone-end  alone_start  duplicate  link-invalid  no_ants  no_path  no_vertices  no_ways  random_file  two_ends  two_starts
maps/my-tests/valid/: a_lot_of_comments  no_n_at_end
parser/: allocate_and_delete_aux_names.c  allocate_and_delete_graph.c  checking_line_condition.c  dispatch_parsing_and_filling.c  fill_ants_and_nbr_field.c  filling.c  filling_edges.c  filling_errors_and_skips.c  find_vertex.c  hash_table_allocate_delete.c  hash_table_operations.c  map_creation.c  map_creation_and_filling.c  parsing.c
path_finder/: algorithm.c  bfs.c  debug_print.c  deep_addons.c  deep_research.c  other_funcs.c  print_line.c  recursive_addons.c  recursive_research.c  sbfs.c  staff_for_bfs_and_other.c  ways_manipulations.c
path_selector/: answer_length.c  count_steps.c  determine_flow.c  find_largest_permitted_path.c  path_calculations.c  path_iteration_wrapers.c  path_nodes_wrapers.c
printer/: move_ants_and_print.c  print_common_case.c  printing_manager_and_special_case.c  wrapers.c
source/: ft_dlstadd.c
src/: fill_map.c  fillers.c  ftothmur.h  line_condition.c  main_initializer.c  parsers.c  vertex_funcs.c
