cmake_minimum_required(VERSION 3.14)
project(lemin_git C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(lib_ftot)
include_directories(libft_t/includes)

add_executable(lemin_git
    includes/ft_printf.h
    includes/lemin.h
    includes/libft.h
    lib_ftot/ft_dlstadd.c
    lib_ftot/ft_dlstaddtip.c
    lib_ftot/ft_dlstcmp.c
    lib_ftot/ft_dlstcontentdel.c
    lib_ftot/ft_dlstdel.c
    lib_ftot/ft_dlstfind.c
    lib_ftot/ft_dlstfind_i.c
    lib_ftot/ft_dlstfind_ir.c
    lib_ftot/ft_dlstfind_r.c
    lib_ftot/ft_dlstforeach.c
    lib_ftot/ft_dlstiter.c
    lib_ftot/ft_dlstnew.c
    lib_ftot/ft_dlstpop.c
    lib_ftot/ft_dlstpop_rear.c
    lib_ftot/ft_dlstpush.c
    lib_ftot/ft_dlstpush_back.c
    lib_ftot/ft_dlstsize.c
    lib_ftot/ft_dlstswap.c
    lib_ftot/ft_imaxtostr.c
    lib_ftot/ft_isdigitnstr.c
    lib_ftot/ft_isdigitstr.c
    lib_ftot/ft_lstcmp_next.c
    lib_ftot/ft_lstfind.c
    lib_ftot/ft_lstremove.c
    lib_ftot/ft_realloc.c
    lib_ftot/ft_reverse.c
    lib_ftot/ft_strint_ou_flow.c
    lib_ftot/ft_strrev.c
    lib_ftot/ft_swap.c
    lib_ftot/ft_uimaxdiv.c
    lib_ftot/libft_f.h
    libft_t/includes/libft.h
    libft_t/adjust_prec_analize_cell.c
    libft_t/adjust_prec_norm_form.c
    libft_t/adjust_prec_rebuild_func.c
    libft_t/adjust_prec_sci_form.c
    libft_t/adjust_prec_utility_func.c
    libft_t/char_manager.c
    libft_t/chose_content.c
    libft_t/chose_content2.c
    libft_t/content_decision_maker.c
    libft_t/distinct_types.c
    libft_t/fill_spec_func1.c
    libft_t/fill_spec_func2.c
    libft_t/find_max_from_three.c
    libft_t/find_middle_from_three.c
    libft_t/find_min_from_three.c
    libft_t/ft_atoi.c
    libft_t/ft_atol.c
    libft_t/ft_avl_balance.c
    libft_t/ft_avl_bfactor.c
    libft_t/ft_avl_create.c
    libft_t/ft_avl_del.c
    libft_t/ft_avl_findmin.c
    libft_t/ft_avl_fix_height.c
    libft_t/ft_avl_height.c
    libft_t/ft_avl_insert.c
    libft_t/ft_avl_remove.c
    libft_t/ft_avl_rot_left.c
    libft_t/ft_avl_rot_right.c
    libft_t/ft_avl_search.c
    libft_t/ft_bzero.c
    libft_t/ft_count_snum_size.c
    libft_t/ft_is_negative.c
    libft_t/ft_isalnum.c
    libft_t/ft_isalpha.c
    libft_t/ft_isascii.c
    libft_t/ft_isdigit.c
    libft_t/ft_isprint.c
    libft_t/ft_itoa.c
    libft_t/ft_itoa_base.c
    libft_t/ft_lstadd.c
    libft_t/ft_lstdel.c
    libft_t/ft_lstdelone.c
    libft_t/ft_lstiter.c
    libft_t/ft_lstmap.c
    libft_t/ft_lstnew.c
    libft_t/ft_max.c
    libft_t/ft_memalloc.c
    libft_t/ft_memccpy.c
    libft_t/ft_memchr.c
    libft_t/ft_memcmp.c
    libft_t/ft_memcpy.c
    libft_t/ft_memdel.c
    libft_t/ft_memjoin.c
    libft_t/ft_memmove.c
    libft_t/ft_memset.c
    libft_t/ft_min.c
    libft_t/ft_pow.c
    libft_t/ft_printf.c
    libft_t/ft_putchar.c
    libft_t/ft_putchar_fd.c
    libft_t/ft_putendl.c
    libft_t/ft_putendl_fd.c
    libft_t/ft_putnbr.c
    libft_t/ft_putnbr_fd.c
    libft_t/ft_putstr.c
    libft_t/ft_putstr_fd.c
    libft_t/ft_str_avl_balance.c
    libft_t/ft_str_avl_bfactor.c
    libft_t/ft_str_avl_create.c
    libft_t/ft_str_avl_del.c
    libft_t/ft_str_avl_findmin.c
    libft_t/ft_str_avl_fix_height.c
    libft_t/ft_str_avl_height.c
    libft_t/ft_str_avl_insert.c
    libft_t/ft_str_avl_remove.c
    libft_t/ft_str_avl_rot_left.c
    libft_t/ft_str_avl_rot_right.c
    libft_t/ft_str_avl_search.c
    libft_t/ft_strcat.c
    libft_t/ft_strchr.c
    libft_t/ft_strclr.c
    libft_t/ft_strcmp.c
    libft_t/ft_strcpy.c
    libft_t/ft_strdel.c
    libft_t/ft_strdup.c
    libft_t/ft_strequ.c
    libft_t/ft_striter.c
    libft_t/ft_striteri.c
    libft_t/ft_strjoin.c
    libft_t/ft_strlcat.c
    libft_t/ft_strlen.c
    libft_t/ft_strmap.c
    libft_t/ft_strmapi.c
    libft_t/ft_strncat.c
    libft_t/ft_strncmp.c
    libft_t/ft_strncpy.c
    libft_t/ft_strnequ.c
    libft_t/ft_strnew.c
    libft_t/ft_strnstr.c
    libft_t/ft_strrchr.c
    libft_t/ft_strsplit.c
    libft_t/ft_strstr.c
    libft_t/ft_strsub.c
    libft_t/ft_strtrim.c
    libft_t/ft_tolower.c
    libft_t/ft_toupper.c
    libft_t/get_next_line.c
    libft_t/hash_table_init.c
    libft_t/ldouble_inf_nan.c
    libft_t/ldouble_manager1.c
    libft_t/ldouble_manager2.c
    libft_t/ldouble_utilities.c
    libft_t/libft_func_1.c
    libft_t/long_arythmetic1.c
    libft_t/long_arythmetic2.c
    libft_t/long_arythmetic3.c
    libft_t/long_arythmetic4.c
    libft_t/long_arythmetic5.c
    libft_t/manage_str.c
    libft_t/num_manager.c
    libft_t/num_manager_utilities.c
    libft_t/print_func.c
    libft_t/put_buf_ld_sci_form.c
    libft_t/put_into_buf_func1.c
    libft_t/put_into_buf_ldouble.c
    libft_t/put_into_buf_ldouble_utilities.c
    libft_t/put_into_buf_utf.c
    libft_t/str_manager.c
    algorithm.c
    ft_qeue.c
    test.c)
